--- a/Tyuiu.AndreevVY.Sprint3.Task0.V16.Lib/Tyuiu.AndreevVY.Sprint3.Task0.V16.Lib.csproj
+++ b/Tyuiu.AndreevVY.Sprint3.Task0.V16.Lib/Tyuiu.AndreevVY.Sprint3.Task0.V16.Lib.csproj
@@ -39,8 +39,8 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="tyuiu.cources.programming.interfaces %283%29">
-      <HintPath>..\tyuiu.cources.programming.interfaces (3).dll</HintPath>
+    <Reference Include="tyuiu.cources.programming.interfaces">
+      <HintPath>..\tyuiu.cources.programming.interfaces.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
